[US6] Implemented feature: List product - Integrated listing, sorting, direction and pagination features into the REST API for Product - Added global exception handler to manage the controller responses - Added unit test for adapters, domain and configuration - Removed unused classes after the project updates
Note: Future work will include integrating the microservice features with other computer resources.
Code reviewed with SonarLint: No Security Hotspots to display
Test with coverage percentage: adapters 100% - configuration 100% - domain 98%